attempt to fix modal sizing and positioning on mobile attempt 1

--- a/src/App.css
+++ b/src/App.css
@@ -406,9 +406,11 @@ p {
     width: 35%;
   }
 
-  .modal-dialog {
+  .modal {
     max-height: 100vh; /* Fallback for browsers that do not support Custom Properties */
-    max-height: calc(var(--vh, 1vh) * 98);
+    max-height: calc(var(--vh, 1vh) * 90);
+    position: absolute;
+    top: 5%;
   }
 
   .App {
